<resources>
    <string name="app_name">Ship Captain Crew</string>
    <string name="dice1_alt_text">Dice Number 1</string>
    <string name="dice2_alt_text">Dice Number 2</string>
    <string name="dice3_alt_text">Dice Number 3</string>
    <string name="dice4_alt_text">Dice Number 4</string>
    <string name="dice5_alt_text">Dice Number 5</string>
    <string name="roll_dice_text">Roll Dice</string>
    <string name="score_title">High Score</string>
</resources>
