<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageButton
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:id="@+id/dice_button_2"
        android:src="@drawable/dice2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/dice1_alt_text"/>

    <ImageButton
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:id="@+id/dice_button_1"
        android:src="@drawable/dice1"
        android:layout_toLeftOf="@+id/dice_button_2"
        android:layout_toStartOf="@+id/dice_button_2"
        android:layout_alignTop="@+id/dice_button_2"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/dice2_alt_text"/>

    <ImageButton
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:id="@+id/dice_button_3"
        android:layout_toRightOf="@id/dice_button_2"
        android:layout_toEndOf="@id/dice_button_2"
        android:layout_alignTop="@+id/dice_button_2"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/dice3"
        android:contentDescription="@string/dice3_alt_text"/>

    <ImageButton
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:id="@+id/dice_button_4"
        android:layout_alignRight="@id/dice_button_2"
        android:layout_alignEnd="@id/dice_button_2"
        android:layout_below="@+id/dice_button_2"
        android:src="@drawable/dice4"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dice4_alt_text"/>

    <ImageButton
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:id="@+id/dice_button_5"
        android:layout_alignLeft="@id/dice_button_2"
        android:layout_alignStart="@id/dice_button_2"
        android:layout_below="@+id/dice_button_2"
        android:src="@drawable/dice5"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:contentDescription="@string/dice1_alt_text"
        android:layout_marginTop="20dp" />


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/roll_dice_text"
    android:id="@+id/reroll_button"
    android:layout_gravity="bottom"
    android:layout_below="@+id/dice_button_4"
    android:layout_alignLeft="@+id/dice_button_4"
    android:layout_alignStart="@+id/dice_button_4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turn Complete"
        android:id="@+id/next_player_button"
        android:layout_gravity="bottom"
        android:layout_alignTop="@+id/reroll_button"
        android:layout_alignLeft="@+id/dice_button_5"
        android:layout_alignStart="@+id/dice_button_5" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Largest Crew:  "
        android:id="@+id/largest_crew_title"
        android:layout_alignLeft="@id/dice_button_1"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/largest_crew"
        android:layout_toRightOf="@id/largest_crew_title"
        android:layout_alignTop="@id/largest_crew_title"
        android:textStyle="bold"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remaining Tries:  "
        android:id="@+id/remaining_tries_title"
       android:layout_alignLeft="@id/largest_crew_title"
        android:layout_below="@id/largest_crew_title"

        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:id="@+id/remaining_tries"
        android:layout_toRightOf="@id/remaining_tries_title"
        android:layout_alignTop="@id/remaining_tries_title"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You"
        android:id="@+id/Player1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player 2"
        android:id="@+id/Player2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toRightOf="@id/Player1"
        android:layout_alignTop="@id/Player1"
        android:layout_marginLeft="7dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player 3"
        android:id="@+id/Player3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toRightOf="@id/Player2"
        android:layout_alignTop="@id/Player2"
        android:layout_marginLeft="7dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player 4"
        android:id="@+id/Player4"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toRightOf="@id/Player3"
        android:layout_alignTop="@id/Player3"
        android:layout_marginLeft="7dp"
        android:visibility="invisible" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player 5"
        android:id="@+id/Player5"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_toRightOf="@id/Player4"
        android:layout_alignTop="@id/Player4"
        android:layout_marginLeft="7dp"
        android:visibility="invisible" />

</RelativeLayout>
